--- a/.classpath
+++ b/.classpath
@@ -5,7 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry exported="true" kind="lib" path="lib/ant.jar" sourcepath="/java.ant-1.7.1/src/main"/>
 	<classpathentry kind="lib" path="lib/ant-launcher.jar"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/projects.oddjob"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/projects.arooa"/>
+	<classpathentry kind="con" path="org.apache.ivyde.eclipse.cpcontainer.IVYDE_CONTAINER/?project=projects.oj-ant&amp;ivyXmlPath=ivy.xml&amp;confs=*&amp;ivySettingsPath=ivysettings.xml&amp;loadSettingsOnDemand=false&amp;ivyUserDir=&amp;propertyFiles="/>
 	<classpathentry kind="output" path="classes"/>
 </classpath>
