--- a/build.xml
+++ b/build.xml
@@ -1,5 +1,10 @@
-<project default="jar" basedir="." name="Ant Oddball">
+<project xmlns:ivy="antlib:org.apache.ivy.ant"
+	default="jar" basedir="." name="Ant Oddball">
 
+	<taskdef resource="org/apache/ivy/ant/antlib.xml"
+	                 uri="antlib:org.apache.ivy.ant" 
+		classpath="../oj-assembly/antlibs/ivy-2.4.0.jar"/>
+	
 	<!-- =================================================================== -->
 	<!-- Initialization target                                               -->
 	<!-- =================================================================== -->
@@ -7,14 +12,15 @@
 
 		<tstamp/>
 
-
 		<!-- =================================================================== -->
 		<!-- Properties                                                          -->
 		<!-- =================================================================== -->
 
+		<property file="../oj-assembly/version.properties"/>
+			
 		<property name="Name"     value="Ant Oddball"/>
 		<property name="name"     value="oj-ant"/>
-		<property name="build.version"  value="0.0.0"/>
+		<property name="build.version"  value="${project.version}"/>
 
 		<property name="oddjob.src"          value="../oddjob"/>
 		<property name="oddjob.home"          value="../oddjob"/>
@@ -42,11 +48,12 @@
 		<property name="lib.dir"      value="./lib"/>
 
 
-		<property name="build.dir"       value="./build"/>
-		<property name="build.src"       value="${build.dir}/src"/>
-		<property name="build.test"      value="${build.dir}/test"/>
-		<property name="build.classes"   value="${build.dir}/classes"/>
-		<property name="build.lib"       value="${build.dir}/lib"/>
+		<property name="build.dir"       	value="./build"/>
+		<property name="build.src"       	value="${build.dir}/src"/>
+		<property name="build.classes"   	value="${build.dir}/classes"/>
+		<property name="build.test"      	value="${build.dir}/test"/>
+		<property name="build.test.classes" value="${build.test}/classes"/>
+		<property name="build.lib"       	value="${build.dir}/lib"/>
 
 		<property name="test.reports" value="${build.test}/reports"/>
 		
@@ -63,39 +70,35 @@
 		<filter token="userguide" value="../userguide"/>
 		<filter token="devguide" value="../devguide"/>
 
-		<!-- =================================================================== -->
-		<!-- Identify Classpath                                                 -->
-		<!-- =================================================================== -->
+	</target>
 
+	<!-- =================================================================== -->
+	<!-- Prepare for the build                                               -->
+	<!-- =================================================================== -->
+	
+	<target name="prepare" depends="init">
+
+		<ivy:resolve conf="provided" refresh="true" />
+		
+		<ivy:resolve conf="test" refresh="true" />
+		
+		<ivy:cachepath pathid="provided-cachepath" conf="provided" />
+				
+		<ivy:cachepath pathid="test-cachepath" conf="test" />
+			
 		<path id="classpath">
 			<fileset dir="${lib.dir}">
 				<include name="*.jar"/>
 				<exclude name="${name}*.jar"/>
 			</fileset>
-			<fileset file="${oddjob.src}/run-oddjob.jar"/>
-			<fileset dir="${oddjob.src}/lib">
-				<include name="*.jar"/>
-			</fileset>
+			<path refid="provided-cachepath"/>
 		</path>
 
 		<path id="test-classpath">
 			<path refid="classpath"/>
 			<pathelement path="${build.classes}" />
-			<pathelement location="${oddjob.src}/build/tools/classes"/>
-			<fileset dir="${oddjob.src}/test/lib">
-				<include name="*.jar"/>
-			</fileset>
-			<fileset dir="${oddjob.src}/opt/lib">
-				<include name="*.jar"/>
-			</fileset>
+			<path refid="test-cachepath"/>
 		</path>
-
-	</target>
-
-	<!-- =================================================================== -->
-	<!-- Prepares the build directory                                        -->
-	<!-- =================================================================== -->
-	<target name="prepare" depends="init">
 
 		<mkdir dir="${build.dir}"/>
 
@@ -171,7 +174,7 @@
 	<target name="compile-tests" depends="compile" description="Compile jUnit tests">
 		<mkdir dir="${build.test}"/>
 
-		<copy todir="${build.test}" filtering="off">
+		<copy todir="${build.test.classes}" filtering="off">
 			<fileset dir="${test.src}">
 				<include name="**/*.xml"/>
 				<include name="**/*.properties"/>
@@ -180,7 +183,7 @@
 		
 		<!-- Compile tests -->
 		<javac srcdir="${test.src}"
-            destdir="${build.test}"
+            destdir="${build.test.classes}"
             debug="${debug}"
             optimize="${optimize}"
             deprecation="${deprecation}">
@@ -198,11 +201,11 @@
 		<junit printsummary="yes" haltonfailure="no" 
 				failureproperty="junit.failure" fork="yes">
 			<classpath>
-				<pathelement location="${build.test}" />
+				<pathelement location="${build.test.classes}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
 			<batchtest todir="${test.reports}">
-				<fileset dir="${build.test}">
+				<fileset dir="${build.test.classes}">
 					<include name="**/test/*TestCase.class"/>
 					<include name="**/*Test.class" />
 					<exclude name="**/AllTest.class" />
@@ -229,7 +232,7 @@
 			
 		<junit printsummary="yes" haltonfailure="yes" fork="yes">
 			<classpath>
-				<pathelement location="${build.test}" />
+				<pathelement location="${build.test.classes}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
 			<formatter type="plain" usefile="no" />
@@ -240,6 +243,13 @@
 		</junit>
 	</target>
 	
+	<!-- =================================================================== -->
+	<!-- Publish the jars in local ivy                                       -->
+	<!-- =================================================================== -->
+	<target name="install" depends="jar">
+		
+	</target>
+		
 	<!-- =================================================================== -->
 	<!-- Prepares the source distribution                                    -->
 	<!-- =================================================================== -->
