--- a/ivy.xml
+++ b/ivy.xml
@@ -4,7 +4,7 @@
 	<configurations>
         <conf name="default" visibility="public"></conf>
         <conf name="provided" visibility="public"></conf>
-        <conf name="test" visibility="public"></conf>
+        <conf name="test" extends="default,provided" visibility="public"></conf>
 	</configurations>  
         
 	<dependencies>
@@ -12,6 +12,12 @@
 	    <dependency org="uk.co.rgordon" name="oddjob" rev="latest.integration"
 	    	conf="provided->default,launch" />
 	    	
+		<dependency org="org.apache.ant" name="ant-launcher" rev="${really.ant.version}"
+			conf="default->default" />
+
+		<dependency org="org.apache.ant" name="ant" rev="${really.ant.version}"
+			conf="default->default" />
+
 	    <dependency org="uk.co.rgordon" name="arooa" rev="latest.integration"
 	    	conf="test->test" />
 	    	
