Small fix to build after ivy migration.

--- a/build.xml
+++ b/build.xml
@@ -266,7 +266,7 @@
 
 		<copy todir="${to.dir}/lib">
 			<fileset dir="${lib.dir}">
-				<exclude name='${jar.name}'/>
+				<exclude name='*.jar'/>
 			</fileset>
 		</copy>
 
@@ -325,7 +325,7 @@
 		<delete dir="${build.dir}"/>
 		<delete>
 			<fileset dir="${lib.dir}">
-				 <include name="${name}*.jar"/>
+				 <include name="*.jar"/>
 			</fileset>
 		</delete>
 		<delete>
