--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
 
 	<taskdef resource="org/apache/ivy/ant/antlib.xml"
 	                 uri="antlib:org.apache.ivy.ant" 
-		classpath="../oj-assembly/antlibs/ivy-2.4.0.jar"/>
+		classpath="../oj-assembly/antlibs/ivy-2.5.0.jar"/>
 	
 	<!-- =================================================================== -->
 	<!-- Initialization target                                               -->
@@ -41,24 +41,25 @@
 		<property name="nowarn"         value="on"/>
 		<!-- <property name="build.compiler" value="classic"/> -->
 
-		<property name="src.dir"      value="./src"/>
-		<property name="java.dir"     value="src/main/java"/>
-		<property name="test.dir"     value="./test"/>
-		<property name="test.src"     value="src/test/java"/>
-		<property name="work.dir"     value="./work"/>
-		<property name="lib.dir"      value="./lib"/>
+		<property name="src.dir"		    value="./src"/>
+		<property name="test.dir"     		value="./test"/>
+		<property name="main.java"        	value="${src.dir}/main/java"/>
+		<property name="main.resources"   	value="${src.dir}/main/resources"/>
+		<property name="test.java"        	value="${src.dir}/test/java"/>
+		<property name="test.resources"   	value="${src.dir}/test/resources"/>
 
-
-		<property name="build.dir"       	value="./build/oddball"/>
+		<property name="build.dir"       	value="./build"/>
 		<property name="build.src"       	value="${build.dir}/src"/>
 		<property name="build.classes"   	value="${build.dir}/classes"/>
-		<property name="build.test"      	value="${build.dir}/test"/>
-		<property name="build.lib"       	value="${build.dir}/lib"/>
 
-		<property name="build.test.classes" value="${build.test}/classes"/>
-		<property name="test.reports" 		value="${build.test}/reports"/>
-		
-		<property name="jar.name"        value="${name}-${build.version}.jar"/>
+		<property name="oddball.dir"		value="${build.dir}/oddball"/>
+		<property name="oddball.lib"    	value="${oddball.dir}/lib"/>
+
+		<property name="build.tests" 		value="${build.dir}/test-classes"/>
+		<property name="test.reports" 		value="${build.dir}/test-reports"/>
+		<property name="work.dir"     		value="${build.dir}/work"/>
+
+		<property name="jar.name"        	value="${name}-${build.version}.jar"/>
 
 		<filter token="Name"    value="${Name}"/>
 		<filter token="name"    value="${name}"/>
@@ -79,21 +80,16 @@
 	
 	<target name="prepare" depends="init">
 
-		<ivy:retrieve conf="default"/>
-		
-		<ivy:resolve conf="provided" refresh="true" />
-		
-		<ivy:resolve conf="test" refresh="true" />
-		
+		<mkdir dir="${build.dir}"/>
+
+		<ivy:cachepath pathid="default-cachepath" conf="default" />
+
 		<ivy:cachepath pathid="provided-cachepath" conf="provided" />
 				
 		<ivy:cachepath pathid="test-cachepath" conf="test" />
 			
 		<path id="classpath">
-			<fileset dir="${lib.dir}">
-				<include name="*.jar"/>
-				<exclude name="${name}*.jar"/>
-			</fileset>
+			<path refid="default-cachepath"/>
 			<path refid="provided-cachepath"/>
 		</path>
 
@@ -101,8 +97,6 @@
 			<pathelement path="${build.classes}" />
 			<path refid="test-cachepath"/>
 		</path>
-
-		<mkdir dir="${build.dir}"/>
 
 	</target>
 
@@ -114,19 +108,9 @@
 
 		<mkdir dir="${build.src}"/>
 		<mkdir dir="${build.classes}"/>
+
 		<copy todir="${build.src}" filtering="on">
-			<fileset dir="src/main/java">
-				<exclude name="**/*.gif"/>
-				<exclude name="**/*.properties"/>
-				<exclude name="**/*.xml"/>
-			</fileset>
-		</copy>
-		<copy todir="${build.src}" filtering="off">
-			<fileset dir="src/main/java">
-				<include name="**/*.gif"/>
-				<include name="**/*.properties"/>
-				<include name="**/*.xml"/>
-			</fileset>
+			<fileset dir="${main.java}"/>
 		</copy>
 	</target>
 
@@ -138,11 +122,7 @@
           description="Compiles the source code">
 
 		<copy todir="${build.classes}">
-			<fileset dir="${build.src}">
-				<include name="**/*.gif"/>
-				<include name="**/*.properties"/>
-				<include name="**/*.xml"/>
-			</fileset>
+			<fileset dir="${main.resources}"/>
 		</copy>
 
 		<echo message="Compiling with Java ${ant.java.version}, debug ${debug}, optimize ${optimize}, deprecation ${deprecation}"/>
@@ -161,12 +141,19 @@
 	<!-- Creates the jar file                                                -->
 	<!-- =================================================================== -->
 	<target name="jar" depends="compile" description="Generates the jar packages">
-		
-	    <jar destfile="${lib.dir}/${jar.name}"
+
+		<mkdir dir="${oddball.dir}"/>
+
+	    <jar destfile="${oddball.lib}/${jar.name}"
 	         basedir="${build.classes}">
-	      <metainf dir="${build.dir}" includes="LICENSE.txt"/>
-	    </jar>
-		
+			<metainf dir=".">
+				<include name="LICENSE.txt"/>
+				<include name="NOTICE.txt"/>
+			</metainf>
+		</jar>
+
+		<ivy:retrieve pattern="${oddball.lib}/[artifact]-[revision].[ext]" conf="default,optional" />
+
 	</target>
 
 	<!-- =================================================================== -->
@@ -174,18 +161,14 @@
 	<!-- =================================================================== -->
 	
 	<target name="compile-tests" depends="compile" description="Compile jUnit tests">
-		<mkdir dir="${build.test}"/>
 
-		<copy todir="${build.test.classes}" filtering="off">
-			<fileset dir="${test.src}">
-				<include name="**/*.xml"/>
-				<include name="**/*.properties"/>
-			</fileset>
+		<copy todir="${build.tests}" filtering="off">
+			<fileset dir="${test.resources}"/>
 		</copy>
 		
 		<!-- Compile tests -->
-		<javac srcdir="${test.src}"
-            destdir="${build.test.classes}"
+		<javac srcdir="${test.java}"
+            destdir="${build.tests}"
             debug="${debug}"
             optimize="${optimize}"
             deprecation="${deprecation}">
@@ -200,24 +183,26 @@
 		<mkdir dir="${work.dir}"/>
 		<mkdir dir="${test.reports}"/>
 		
-		<junit printsummary="yes" haltonfailure="no" 
-				failureproperty="junit.failure" fork="yes" forkMode="once">
+		<junitlauncher printsummary="yes" haltonfailure="no"
+				failureproperty="junit.failure">
 			<classpath>
-				<pathelement location="${build.test.classes}" />
+				<pathelement location="${build.tests}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
-			<batchtest todir="${test.reports}">
-				<fileset dir="${build.test.classes}">
-					<include name="**/test/*TestCase.class"/>
+			<testclasses outputdir="${basedir}/${test.reports}">
+				<fork>
+					<sysproperty key="basedir" value="${basedir}"/>
+					<sysproperty key="ant.file" value="${ant.file}"/>
+				</fork>
+				<fileset dir="${build.tests}">
 					<include name="**/*Test.class" />
 					<exclude name="**/AllTest.class" />
 					<exclude name="**/*$$*Test.class" />
 				</fileset>
-			</batchtest>
-			<formatter type="xml"/>
-			<sysproperty key="basedir" value="${basedir}"/>
-			<sysproperty key="ant.file" value="${ant.file}"/>
-		</junit>
+				<listener type="legacy-brief" sendSysOut="true"/>
+				<listener type="legacy-xml" sendSysErr="true" sendSysOut="true"/>
+			</testclasses>
+		</junitlauncher>
 		
 		<junitreport todir="${test.reports}">
 			<fileset dir="${test.reports}">
@@ -226,7 +211,7 @@
 		    <report todir="${test.reports}"/>
 		</junitreport>		
 		
-		<fail if="junit.failure" message="Unit test(s) failed. See reports in ${test.reports}."/>	
+		<fail if="junit.failure" message="Unit test(s) failed. See reports in ${test.reports}."/>
 	</target>
 
 	<target name="single-test" depends="jar" description="Single JUnit test">
@@ -234,7 +219,7 @@
 			
 		<junit printsummary="yes" haltonfailure="yes" fork="yes">
 			<classpath>
-				<pathelement location="${build.test.classes}" />
+				<pathelement location="${build.tests}" />
 			</classpath>
 			<classpath refid="test-classpath"/>
 			<formatter type="plain" usefile="no" />
@@ -265,16 +250,8 @@
 			<fileset dir="${src.dir}"/>
 		</copy>
 
-		<copy todir="${to.dir}/lib">
-			<fileset dir="${lib.dir}">
-				<exclude name='*.jar'/>
-			</fileset>
-		</copy>
-
 		<copy todir="${to.dir}/test">
-			<fileset dir="${test.dir}">
-				<exclude name="persist/**"/>
-			</fileset>
+			<fileset dir="${test.dir}"/>
 		</copy>
 
 		<copy todir="${to.dir}">
@@ -282,6 +259,10 @@
 				<include name="build.xml"/>
                 <include name="ivy.xml"/>
                 <include name="ivysettings.xml"/>
+				<include name="LICENSE.txt"/>
+				<include name="NOTICE.txt"/>
+				<include name="README.md"/>
+				<include name="pom.xml"/>
 			</fileset>
 		</copy>
 
@@ -290,14 +271,14 @@
 	<!-- =================================================================== -->
 	<!-- Prepares the binary distribution                                    -->
 	<!-- =================================================================== -->
-	<target name="dist-bin" depends="jar">
+	<target name="dist-bin" depends="jar"
+			description="Prepares the binary distribution"
+			if="dist.bin.dir">
 		
 		<property name="to.dir" value="${dist.bin.dir}/oddballs/${name}"/>
-		<property name="to.lib" value="${to.dir}/lib"/>
-		
-		<!-- And now the jars -->
-		<copy todir="${to.lib}">
-			<fileset dir="${lib.dir}"/>
+
+		<copy todir="${to.dir}">
+			<fileset dir="${oddball.dir}"/>
 		</copy>
 
 	</target>
