--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     </profiles>
 
     <properties>
-        <ant.version>1.10.1</ant.version>
+        <ant.version>1.10.7</ant.version>
         <integration.test.tag>IntegrationTest</integration.test.tag>
     </properties>
 
@@ -53,6 +53,34 @@
             <groupId>org.apache.ant</groupId>
             <artifactId>ant</artifactId>
             <version>${ant.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-junit</artifactId>
+            <version>${ant.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-junit4</artifactId>
+            <version>${ant.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-junit4</artifactId>
+            <version>${ant.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.ant</groupId>
+            <artifactId>ant-junitlauncher</artifactId>
+            <version>${ant.version}</version>
+            <scope>runtime</scope>
         </dependency>
 
         <dependency>
