--- a/pom.xml
+++ b/pom.xml
@@ -71,13 +71,6 @@
 
         <dependency>
             <groupId>org.apache.ant</groupId>
-            <artifactId>ant-junit4</artifactId>
-            <version>${ant.version}</version>
-            <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>org.apache.ant</groupId>
             <artifactId>ant-junitlauncher</artifactId>
             <version>${ant.version}</version>
             <scope>runtime</scope>
@@ -181,7 +174,10 @@
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <configuration>
                     <skipTests>${skip.integration.tests}</skipTests>
-                    <groups>${integration.test.tag}</groups>
+                    <groups>IntegrationTest</groups>
+                    <includes>
+                        <include>**/*Test.java</include>
+                    </includes>
                 </configuration>
                 <executions>
                     <execution>
