--- a/pom.xml
+++ b/pom.xml
@@ -5,12 +5,29 @@
     <parent>
         <groupId>uk.co.rgordon</groupId>
         <artifactId>oj-parent</artifactId>
-        <version>1.6-SNAPSHOT</version>
+        <version>1.6.0</version>
     </parent>
 
     <artifactId>oj-ant</artifactId>
+
     <name>Oddjob Ant Oddball</name>
+    <description>Ant Oddball for Oddjob</description>
     <url>http://rgordon.co.uk/oddjob</url>
+
+    <licenses>
+        <license>
+            <name>The Apache License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
+
+    <developers>
+        <developer>
+            <id>rob</id>
+            <name>Rob</name>
+            <email>contact@rgordon.co.uk</email>
+        </developer>
+    </developers>
 
     <scm>
         <url>https://github.com/robjg/oj-ant</url>
