Move to Maven for compile and test build phases of the Oddjob Application.

--- a/build.xml
+++ b/build.xml
@@ -52,7 +52,9 @@
 		<property name="build.src"       	value="${build.dir}/src"/>
 		<property name="build.classes"   	value="${build.dir}/classes"/>
 
-		<property name="oddball.dir"		value="${build.dir}/oddball"/>
+		<property name="target.dir"       	value="./target"/>
+
+		<property name="oddball.dir"		value="${target.dir}/oddball"/>
 		<property name="oddball.lib"    	value="${oddball.dir}/lib"/>
 
 		<property name="build.tests" 		value="${build.dir}/test-classes"/>
@@ -271,7 +273,8 @@
 	<!-- =================================================================== -->
 	<!-- Prepares the binary distribution                                    -->
 	<!-- =================================================================== -->
-	<target name="dist-bin" depends="jar"
+
+	<target name="dist-bin" depends="init"
 			description="Prepares the binary distribution"
 			if="dist.bin.dir">
 		
@@ -304,6 +307,7 @@
 	<!-- =================================================================== -->
 		
 	<target name="clean" depends="init" description="Cleans the build directories">
+		<delete dir="${target.dir}"/>
 		<delete dir="${build.dir}"/>
 	</target>
 
