--- a/pom.xml
+++ b/pom.xml
@@ -186,6 +186,9 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
+                    <systemProperties>
+                        <logback.debug>true</logback.debug>
+                    </systemProperties>
                     <skipTests>${skipTests}</skipTests>
                     <excludedGroups>${integration.test.tag}</excludedGroups>
                 </configuration>
